--- a/style/index.css
+++ b/style/index.css
@@ -9,7 +9,8 @@
     --green-100 : #BEF264;
 }
 
-#bemVindo{
+.container{
+    gap: 80px;
     margin: 45px 0;
     display: flex;
     align-items: center;
@@ -21,7 +22,7 @@
     max-width: 600px;
 }
 
-#bemVindo>div>h2{
+.container>div>h2{
     color: var(--green-100);
     font-size: 40px;
 }
@@ -40,10 +41,10 @@
     background-color: var(--white-100);
 }
 
-#bemVindo>div>p{
+.container>div>p{
     margin: 32px 0 45px;
 }
-#bemVindo .button{
+.container .button{
     color: var(--green-100);
     border: 1px solid var(--green-100);
     display: inline-block;
@@ -51,7 +52,70 @@
     border-radius: 6px;
 }
 
-#bemVindo a:hover{
+.container a.button:hover{
     color: var(--black-900);
     background-color: var(--green-100);
 }
+
+#quemSomos{
+    margin: 85px 0;
+}
+#quemSomos>div>p{
+    padding: 0 0 0 20px;
+    border-left: 5px solid var(--green-100);
+}
+
+#cadsCursos{
+    display: flex;
+    justify-content: space-between;
+}
+
+#cadsCursos>section{
+    width: 386px;
+    height: 320px;
+    border: 1px solid var(--gray-500);
+    border-radius: 6px;
+    background-color: var(--black-700);
+}
+#cadsCursos .imagem{
+    width: 385px;
+    height: 150px;
+    border-top: 1px solid var(--gray-500);
+    border-left: 1px solid var(--gray-500);
+    border-right: 1px solid var(--gray-500);
+    border-radius: 6px 6px 0 0;
+    background-color: var(--gray-500);
+}
+#cadsCursos>section>h3{
+    padding: 5px 13px;
+}
+#cadsCursos>section>p{
+    color: var(--green-100);
+    padding: 5px 13px;
+    font-size: 14px;
+    font-weight: 300;
+}
+#cadsCursos>section>.perfilProf{
+    gap: 8px;
+    display: flex;
+    padding: 13px;
+    align-items: center;
+}
+#cadsCursos>section>.perfilProf p{
+    
+    padding: 3px;
+}
+#cadsCursos>section>.perfilProf .atuacao{
+    color: var(--gray-100);
+    font-weight: 300;
+}
+
+#cadsCursos>section>.perfilProf img{
+    width: 40px;
+    height: 40px;
+    border: 1px solid var(--green-100);
+    border-radius: 50%;
+    background-color: var(--gray-500);
+}
+
+
