--- a/style/main.css
+++ b/style/main.css
@@ -22,6 +22,7 @@ main{
 }
 
 body{
+    padding: 12px;
     color: var(--white-100);
     font-family: Inter;
     background-color: var(--black-900);
