--- a/style/main.css
+++ b/style/main.css
@@ -22,8 +22,8 @@ main{
 }
 
 body{
-    padding: 12px;
     color: var(--white-100);
+    overflow-x: hidden;
     font-family: Inter;
     background-color: var(--black-900);
 }
@@ -75,6 +75,7 @@ footer{
     padding: 45px 0px; 
     margin-top: 24px;
     border-top: 1px solid var(--gray-500);
+    background-color: var(--black-900);
 }
 
 #container_footer{
@@ -82,6 +83,10 @@ footer{
     display: flex;
     max-width: 1200px;
     justify-content: space-between;
+}
+
+footer section p{
+    margin-top: 32px;
 }
 
 footer section h4{
@@ -96,21 +101,18 @@ footer section ul li{
     padding: 5px 0;
 }
 
-footer section p{
-    margin-top: 32px;
-}
-
 section a{ 
     color: var(--white-200);
     text-decoration: none;
 }
 
+footer .logo {
+    padding-bottom: 12px;
+}
+
 footer .logo a{
     color: var(--white-100);
     font-size: 32px;
-    padding-bottom: 12px;
-}
-footer .logo {
     padding-bottom: 12px;
 }
 
@@ -122,3 +124,4 @@ footer .logo {
     gap: 12px;
     display: flex;
 }
+
