--- a/style/login.css
+++ b/style/login.css
@@ -5,7 +5,7 @@
     --gray-100  : #A1A1AA;
     --white-100 : #FAFAFA;
     --white-200 : #797979;
-    --green-700 : #81c439;
+    --green-700 : #90b64f;
     --green-100 : #BEF264;
 }
 
@@ -13,7 +13,7 @@
     border: 1px solid var(--gray-500);
     margin: 56px auto;
     padding: 32px;
-    max-width: 385px;
+    max-width: 485px;
     border-radius: 12px;
     background-color: var(--black-700);
 }
@@ -26,62 +26,87 @@
 
 .login p{
     color: var(--gray-100);
+    margin: 12px 0;
+    font-size: 15px;
     text-align: center;
-    font-weight: 300;
 }
 
-
 form{
-
     margin-top: 48px;
 }
 
-form label{
-    color: var(--white-100);
-    display: block;
-    margin-bottom: 12px;
-}
-
-input:focus {
-    outline: 0;
-}
-.conect{
-    color: var(--gray-100);
-}
-
-form>div>input, form>input{
-    
-    color: var(--white-100);
-    width: 100%;
-    border: none;
-    padding: 12px;
-    display: block;
-    font-size: 16px;
+form>div{
+    gap: 6px;
+    margin: 12px 0 24px 0;
+    height: 48px;
+    padding: 0px 12px;
+    display: flex;
+    align-items: center;
     border-radius: 6px;
-    margin-bottom: 12px;
-}
-
-.icone{
-    height: 24px;
-}
-
-input[type=email], input[type=password]{
     background-color: var(--gray-500);
 }
 
-input[type=checkbox] {
-    margin-top: 25px;
-    outline: 0;
+input[type="email"], input[type="password"] {
+    color: var(--white-100);
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 6px;
+    font-size: 16px;
+    background-color: var(--gray-500);
+}
+#check{
+    color: var(--gray-100);
+    padding: 0;
+    background-color: transparent;
+}
+input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
     cursor: pointer;
+    appearance: none;
+    border-radius: 4px;
+    background-color: var(--gray-500);
 }
 
+input[type="checkbox"]:checked {
+    position: relative;
+    border-color: var(--green-100);  
+}
 
-input[type=submit]{
-    color: var(--black-700);
-    margin-top: 32px;
+input[type="checkbox"]:checked::after {  
+    top: 1px; 
+    left: 6px;
+    width: 6px;
+    height: 12px;
+    border: 2px solid var(--green-100); 
+    content: '';
+    position: absolute;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+}
+
+input[type="submit"] {   
+    width: 100%;
+    height: 43px;
+    border: none;
+    cursor: pointer;
+    padding: 12px;
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 16px;
+    border-radius: 6px;
     background-color: var(--green-100);
 }
-
-input[type=submit]:hover{
+input[type="submit"]:hover {  
+    width: 100%;
+    height: 43px;
+    transition: 100ms;
     background-color: var(--green-700);
+}
+form>a{
+    display: block;
+    margin-top: 12px ;
+    text-align: center;
+    text-decoration: underline;
 }
