--- a/style/index.css
+++ b/style/index.css
@@ -11,7 +11,7 @@
 body{
     
     background-size: cover;
-    background-image: url(../images/fundo1.jpg);
+    background-image: url(../images/background_4.png);
     background-repeat: no-repeat;
     background-position: top;
 }
