--- a/style/index.css
+++ b/style/index.css
@@ -2,12 +2,15 @@
     --black-900 : #09090B;
     --black-700 : #18181B;
     --gray-500  : #3E3E44;
+    --gray-400  : #7C7C8A;
     --gray-100  : #A1A1AA;
     --white-100 : #FAFAFA;
     --white-200 : #797979;
     --green-700 : #1A2E05;
     --green-100 : #BEF264;
+    --gray-alpha: rgba(24, 24, 27, 0.985);  
 }
+
 body{
     
     background-size: cover;
@@ -15,6 +18,7 @@ body{
     background-repeat: no-repeat;
     background-position: top;
 }
+
 .container{
     gap: 80px;
     margin: 70px 0;
