--- a/style/paleta.css
+++ b/style/paleta.css
@@ -6,7 +6,7 @@
     --gray-100  : #A1A1AA;
     --white-100 : #FAFAFA;
     --white-200 : #797979;
-    --green-700 : #1A2E05;
+    --green-200 : #9dca4f;
     --green-100 : #BEF264;
     --gray-alpha: rgba(24, 24, 27, 0.985);
 }
