--- a/style/contato.css
+++ b/style/contato.css
@@ -1,37 +1,39 @@
 @import url(paleta.css);
 
 form{
-    display: flex;
-    margin-top: 48px;
     gap: 24px;
+    display: flex;
     flex-wrap: wrap;   
-    justify-content: space-between;
+    margin-top: 48px;
     align-items: center;
+    justify-content: space-between;
 }
 
-#filho1 {
+#dadosUser{
+    flex-grow: 1;
     border: 1px solid var(--gray-500);
     padding: 32px;
-    max-width: 484px;
+    max-height: 500px;
     border-radius: 12px;
     background-color: var(--black-700);
 }
 
-#filho2 {
+#mensagem{
     border: 1px solid var(--gray-500);
     padding: 32px;
-    max-width: 711px;
+    flex-grow: 2;
+    max-height: 490px;
     border-radius: 12px;
     background-color: var(--black-700);
 }
 
-#filho1  img{
+#dadosUser img{
     width: 64px;
     margin: auto;
     display: block;   
 }
 
-#filho1 p{
+#dadosUser p{
     color: var(--gray-100);
     margin: 12px 0;
     font-size: 15px;
@@ -47,7 +49,6 @@ form .inputs{
     align-items: center;
     border-radius: 6px;
     background-color: var(--gray-500); 
-    max-width: 400px;  
 }
 form .input_texto{
     gap: 6px;
@@ -57,39 +58,40 @@ form .input_texto{
     display: flex;
     align-items: center;
     border-radius: 6px;
-    max-width: 644px;  
     background-color: var(--gray-500);   
 }
 
 
 input[type="email"], input[type="password"], input[type="text"], input[type="tel"], input[type="date"], select, textarea  {
     color: var(--white-100);
-    width: 400px;
     border: none;
+    resize: none;
     outline: none;
     padding: 6px;
     font-size: 16px;
     background-color: var(--gray-500);
-    resize: none
 }
 
 #texto{
     color: var(--white-100);
-    width: 652px;
+    width: 100%;
     border: none;
+    resize: none;
+    height: 216px;
     outline: none;
     padding: 6px;
     font-size: 16px;
     background-color: var(--gray-500);  
-    height: 216px;
-    resize: none
 }
 
 .input_texto > svg{
-    margin-bottom: auto;
     margin-top: 10px;
+    margin-bottom: auto;
 }
-input[type="submit"] {   
+
+div>input[type="submit"] {  
+    display: block;
+    margin-left: auto;
     width: 178px;
     height: 43px;
     border: none;
@@ -97,14 +99,13 @@ input[type="submit"] {
     padding: 12px;
     font-size: 16px;
     font-weight: 600;
-    margin-bottom: 16px;
     border-radius: 6px;
     background-color: var(--green-100);
-    margin-left: 29em;
 }
+
 input[type="submit"]:hover {  
     width: 178px;
     height: 43px;
     transition: 100ms;
-    background-color: var(--green-700);
+    background-color: var(--green-200);
 }
