--- a/style/index.css
+++ b/style/index.css
@@ -16,27 +16,9 @@ body{
     justify-content: space-between;
 }
 
-#bemVindo>div{
-    max-width: 600px;
-}
-
 .container>div>h2{
     color: var(--green-100);
     font-size: 40px;
-}
-
-#bemVindo>div>h2>span{
-    color: var(--black-900);
-    display: inline-block;
-    background-color: var(--white-100);
-}
-
-#bemVindo>div>.lineBottom{
-    width: 200px;
-    height: 8px;
-    margin: 16px 0;
-    border-radius: 0 20px 20px 0;
-    background-color: var(--white-100);
 }
 
 .container>div>p{
@@ -56,14 +38,35 @@ body{
     background-color: var(--green-100);
 }
 
+
+#bemVindo>div{
+    max-width: 600px;
+}
+
+#bemVindo>div>h2>span{
+    color: var(--black-900);
+    display: inline-block;
+    background-color: var(--white-100);
+}
+
+#bemVindo>div>.lineBottom{
+    width: 200px;
+    height: 8px;
+    margin: 16px 0;
+    border-radius: 0 20px 20px 0;
+    background-color: var(--white-100);
+}
+
 #quemSomos{
     gap: 32px;
     margin: 430px 0 0 0;
     flex-wrap: wrap;
 }
+
 #quemSomos>div{
     max-width: 600px;
 }
+
 #quemSomos>div>p{
     padding: 0 0 0 20px;
     border-left: 5px solid var(--green-100);
@@ -74,8 +77,7 @@ body{
     margin: 90px 0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    
+    justify-content: center;   
 }
 
 #cardsCursos>section{
@@ -114,8 +116,7 @@ body{
     align-items: center;
 }
 
-#cardsCursos>section>.perfilProf p{
-    
+#cardsCursos>section>.perfilProf p{  
     padding: 3px;
 }
 
@@ -156,8 +157,8 @@ body{
 }
 
 .numeroros .estatisticas>section>h3{
-    font-size: 32px;
     margin: 12px 0;
+    font-size: 32px;
 }
 
 .linguagens{     
@@ -170,8 +171,8 @@ body{
 
 .linguagens>p {
     width: 100%;
-    text-align: center;
     color: var(--green-100);
+    text-align: center;
 }
 
 .linguagens>h2 {
@@ -197,3 +198,21 @@ body{
     color: var(--green-100);
     margin-bottom: 10px;
 }
+
+
+@keyframes appear {
+    from {
+      opacity: 0;
+      scale: 0.5;
+    }
+    to {
+      opacity: 1;
+      scale: 1;
+    }
+  }
+
+.intro {
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 30%;
+  }
