--- a/style/main.css
+++ b/style/main.css
@@ -137,3 +137,19 @@ footer .logo a{
     display: flex;
 }
 
+@keyframes appear {
+    from {
+      opacity: 0;
+      scale: 0.5;
+    }
+    to {
+      opacity: 1;
+      scale: 1;
+    }
+  }
+
+.intro {
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 30%;
+  }
