--- a/style/index.css
+++ b/style/index.css
@@ -3,7 +3,7 @@
 body{
     
     background-size: cover;
-    background-image: url(../images/background_4.png);
+    background-image: url(../images/background/background_4.png);
     background-repeat: no-repeat;
     background-position: top;
 }
@@ -102,7 +102,7 @@ body{
     padding: 5px 13px;
 }
 
-#cardsCursos section p{
+#cardsCursos section>p{
     color: var(--green-100);
     padding: 5px 13px;
     font-size: 14px;
@@ -120,7 +120,7 @@ body{
     padding: 3px;
 }
 
-.perfilProf .atuacao{
+.perfilProf .atuacao {
     color: var(--gray-100);
     font-weight: 300;
 }
@@ -199,10 +199,6 @@ body{
     margin-bottom: 10px;
 }
 
-
 swiper-slide{
     padding: 48px 0;
 }
-
-
-
