--- a/style/main.css
+++ b/style/main.css
@@ -136,6 +136,9 @@ main{
 
 footer{
     color: var(--white-100);
+    width: 100vw;
+    position: absolute;
+    left:  0px;
     padding: 45px 0px; 
     margin-top: 24px;
     border-top: 1px solid var(--gray-500);
