--- a/style/index.css
+++ b/style/index.css
@@ -56,6 +56,34 @@ body{
     background-color: var(--white-100);
 }
 
+.numeroros{
+    left: 0px;
+    width: 100vw;
+    padding: 45px 0;
+    position: absolute;
+    background-image: linear-gradient(to right, var(--black-900), var(--black-700), var(--black-900));   
+}
+
+.numeroros div{
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    justify-content: space-between;
+}
+
+.numeroros div section{
+    width: 376px;
+    border: 1px solid var(--gray-500);
+    padding: 16px 16px;
+    border-radius: 6px;
+}
+
+.numeroros div section h3{
+    margin: 12px 0;
+    font-size: 32px;
+}
+
 #quemSomos{
     gap: 32px;
     margin: 430px 0 0 0;
@@ -71,7 +99,7 @@ body{
     border-left: 5px solid var(--green-100);
 }
 
-#cardsCursos{
+.cardsCursos{
     gap: 20px;
     margin: 90px 0;
     display: flex;
@@ -79,7 +107,7 @@ body{
     justify-content: center;   
 }
 
-#cardsCursos section{
+.cardsCursos section{
     height: 320px;
     border: 1px solid var(--gray-500);
     max-width: 386px;
@@ -87,7 +115,7 @@ body{
     background-color: var(--black-700);
 }
 
-#cardsCursos .imagem{
+.cardsCursos .imagem{
     max-width: 378px;
     height: 150px;
     border-top: 1px solid var(--gray-500);
@@ -97,11 +125,11 @@ body{
     background-color: var(--gray-500);
 }
 
-#cardsCursos section h3{
+.cardsCursos section h3{
     padding: 5px 13px;
 }
 
-#cardsCursos section>p{
+.cardsCursos section>p{
     color: var(--green-100);
     padding: 5px 13px;
     font-size: 14px;
@@ -130,35 +158,6 @@ body{
     border: 1px solid var(--green-100);
     border-radius: 50%;
     background-color: var(--gray-500);
-}
-
-.numeroros{
-    left: 0px;
-    width: 100vw;
-    padding: 45px 0;
-    position: absolute;
-    background-image: linear-gradient(to right, var(--black-900), var(--black-700), var(--black-900));   
-}
-
-.numeroros div{
-    margin: auto;
-    
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 1200px;
-    justify-content: space-between;
-}
-
-.numeroros div section{
-    width: 376px;
-    border: 1px solid var(--gray-500);
-    padding: 16px 16px;
-    border-radius: 6px;
-}
-
-.numeroros div section h3{
-    margin: 12px 0;
-    font-size: 32px;
 }
 
 .linguagens{     
@@ -203,4 +202,31 @@ body{
 
 swiper-slide{
     padding: 48px 0;
+}
+
+@media screen and (min-width: 825px){
+    #slide-mobile, #slide-tablet{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 825px){
+    #slide-descktop, #slide-mobile{
+        display: none;
+    }
+    #slide-tablet{
+        display: block;
+    }
+}
+
+@media screen and (max-width: 555px){
+    #slide-descktop, #slide-tablet{
+        display: none;
+    }
+    #slide-mobile{
+        display: block;
+    }
+    .cardsCursos{
+        margin: auto;
+    }
 }
