--- a/style/index.css
+++ b/style/index.css
@@ -2,7 +2,7 @@
 
 body{   
     background-size: cover;
-    background-image: url(../images/background/background_4.png);
+    background-image: url(../images/background/background1.jpg);
     background-repeat: no-repeat;
     background-position: top;
 }
@@ -40,8 +40,6 @@ body{
     max-width: 600px;
 
 }
-
-
 
 #bemVindo div h2 span{
     color: var(--black-900);
@@ -212,7 +210,7 @@ swiper-slide{
 }
 
 @media screen and (max-width: 825px){
-    #slide-descktop, #slide-mobile{
+    #slide-desktop, #slide-mobile{
         display: none;
     }
     #slide-tablet{
@@ -221,7 +219,7 @@ swiper-slide{
 }
 
 @media screen and (max-width: 555px){
-    #slide-descktop, #slide-tablet{
+    #slide-desktop, #slide-tablet{
         display: none;
     }
     #slide-mobile{
