--- a/style/contato.css
+++ b/style/contato.css
@@ -87,6 +87,10 @@ input[type="email"], input[type="password"], input[type="text"], input[type="tel
 .input_texto > svg{
     margin-top: 10px;
     margin-bottom: auto;
+
+    width: 2em;
+    height: 2em;
+
 }
 
 div>input[type="submit"] {  
@@ -108,4 +112,25 @@ input[type="submit"]:hover {
     height: 43px;
     transition: 100ms;
     background-color: var(--green-200);
+}
+
+
+@media screen and (max-width: 758px) {
+    form{
+        display: inline;
+
+    }
+}  
+@media screen and (max-width: 400px) {
+    #mensagem{
+        margin-top: 20px;
+        gap: 32px;
+    }
+    #mensagem svg {
+        width: 50;
+        height: 50;
+        fill: none;
+    }
+
+
 }
